<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="screen_settings">

    <PreferenceCategory
        android:key="pref_notifications"
        android:title="@string/pref_cat_notificacions">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notify_on"
            android:title="@string/pref_title_notifications_on" />

        <ListPreference
            android:defaultValue="5"
            android:dependency="notify_on"
            android:entries="@array/pref_notify_end_options"
            android:entryValues="@array/pref_notify_end_values"
            android:key="notify_time"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_notify_end" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_zonaParken"
        android:title="@string/pref_cat_zonaParken">

        <ListPreference
            android:defaultValue="1000"
            android:entries="@array/pref_find_zonaParken_options"
            android:entryValues="@array/pref_find_zonaParken_values"
            android:key="distance_zonaParken"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_find_zonaParken" />

    </PreferenceCategory>


</PreferenceScreen>